add food item OK

--- a/chef/templates/chef/includes/add-meal-item-app/template.html
+++ b/chef/templates/chef/includes/add-meal-item-app/template.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-md-4">
           <div class="form-group">
-            <label for="">آیتم</label>
+            <label for="">واحد</label>
             <select v-model="unit_name" class="form-control">
               
                 {% for unit_name in unit_names_for_add_invoice_line %}
