--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -49,7 +49,7 @@
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:settings'  %}">
-            <img src="{% static 'accounting/img/setting.png' %}" width="64em" class="mb-2" alt="">
+            <img src="{% static 'img/icons/settings.png' %}" width="64em" class="mb-2" alt="">
             <h6 class="text-center">
                 تنظیمات
             </h6>
