--- a/chef/templates/chef/foods.html
+++ b/chef/templates/chef/foods.html
@@ -3,16 +3,16 @@
 {% load static %}
 {% block content %}
 <div class="row rtl farsi">
-    {% if add_meal_form %}
+    {% if add_food_form %}
       <div class="col-md-12">
-          {% include "chef/includes/add-meal-app/template.html" %}
+          {% include "chef/includes/add-food-app/template.html" %}
 
       </div>
     {% endif %}
     <div class="col-md-12">
 
         
-        {% include "chef/includes/meals-app/template.html" %}
+        {% include "chef/includes/foods-app/template.html" %}
     </div>
 
 </div>
@@ -20,8 +20,8 @@
 
 
 {% block script %}
-{% include "chef/includes/meals-app/script.html" %}
-{% if add_meal_form %}
-{% include "chef/includes/add-meal-app/script.html" %}
+{% include "chef/includes/foods-app/script.html" %}
+{% if add_food_form %}
+{% include "chef/includes/add-food-app/script.html" %}
 {% endif %}
 {% endblock script %}
