--- a/chef/templates/chef/report.html
+++ b/chef/templates/chef/report.html
@@ -1,5 +1,5 @@
 
-{% extends "core/layout.html" %}
+{% extends "chef/layout.html" %}
 {% load static %}
 {% block content %}
 <div class="row rtl farsi">
