--- a/accounting/templates/accounting/invoice.html
+++ b/accounting/templates/accounting/invoice.html
@@ -1,28 +1,27 @@
 {% extends "accounting/layout.html" %}
 {% block content %}
 <div class="row rtl farsi">
-     
-   <div class="col-md-12">
+    {% if add_invoice_line_form %}
+    <div class="col-md-12 ">
+        {% include "accounting/includes/add-invoice-line-app/template.html" %}
+    </div>
+    {% endif %}
+    <div class="col-md-12">
         {% include "accounting/includes/invoice-app/card.html" %}
-
-   </div>
-   
+    </div>
     <div class="col-md-12 ">
         {% include "accounting/includes/invoice-lines-app/template.html" %}
     </div>
-    
 </div>
 {% endblock content %}
 
 {% block script %}
-<script>
-    
-   
-    
-
-</script> 
-
-{% include "accounting/includes/invoice-lines-app/script.html" %}
-        {% include "accounting/includes/invoice-app/script.html" %}
  
+{% include "accounting/includes/invoice-app/script.html" %}
+
+{% if add_invoice_line_form %}
+{% include "accounting/includes/add-invoice-line-app/script.html" %}
+{% endif %}
+{% include "accounting/includes/invoice-lines-app/script.html" %}
+
 {% endblock script %}
