--- a/accounting/templates/accounting/includes/invoice-lines-app/script.html
+++ b/accounting/templates/accounting/includes/invoice-lines-app/script.html
@@ -29,6 +29,9 @@
         to_price: function (vall) {
             return to_price(vall * currency_coef, "")
         },
+        calculate_total:function(){
+
+        },
         sum_total: function () {
             let sum = 0
             this.invoice_lines.forEach(invoice_line => {
