--- a/accounting/templates/accounting/includes/add-invoice-line-app/template.html
+++ b/accounting/templates/accounting/includes/add-invoice-line-app/template.html
@@ -1,6 +1,6 @@
 <div class="card" id="add-invoice-line-app">
   <div class="card-header">
-    <h4>افزودن آیتم وعده</h4>
+    <h4>افزودن سطر فاکتور</h4>
   </div>
   <div class="card-body">
     <form @submit.prevent="add_invoice_line()">
@@ -9,9 +9,11 @@
           <div class="form-group">
             <label for="">آیتم</label>
             <select v-model="invoice_line_item_id" class="form-control">
-              <option :value="invoice_line_item.id" v-for="invoice_line_item in invoice_line_items"
-                v-text=" invoice_line_item.title +' هر '+invoice_line_item.unit_name+ '  ' +to_price(invoice_line_item.unit_price) + '{{CURRENCY}}' ">
-              </option>
+              <option
+                :value="invoice_line_item.id"
+                v-for="invoice_line_item in invoice_line_items"
+                v-text=" invoice_line_item.title +' هر '+invoice_line_item.unit_name+ '  ' +to_price(invoice_line_item.unit_price) + '{{CURRENCY}}' "
+              ></option>
             </select>
           </div>
         </div>
@@ -26,25 +28,23 @@
           <div class="form-group">
             <label for="">واحد</label>
             <select v-model="unit_name" class="form-control">
-
               {% for unit_name in unit_names_for_add_invoice_line %}
 
               <option value="{{unit_name}}">{{unit_name}}</option>
               {% endfor %}
-
             </select>
           </div>
         </div>
         <div class="col-md-4">
           <div class="form-group">
-            <label for="">قیمت
+            <label for=""
+              >قیمت
               <small class="text-secondary my-2">
                 <span v-text="to_price(unit_price)"></span>
                 {{CURRENCY}}
               </small>
             </label>
             <input v-model="unit_price" type="number" class="form-control" />
-
           </div>
         </div>
 
@@ -55,18 +55,51 @@
 
               <small class="text-secondary my-2">
                 <span v-text="discount_percentage"></span> %
-
               </small>
             </label>
-            <input max="100" min="0" v-model="discount_percentage" type="number" class="form-control" />
+            <input
+              max="100"
+              min="0"
+              v-model="discount_percentage"
+              type="number"
+              class="form-control"
+            />
           </div>
         </div>
+        <div class="col-md-12"></div>
+
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for=""> ضریب </label>
+            <input
+              max="100"
+              min="0"
+              v-model="coef"
+              type="number"
+              class="form-control"
+            />
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">ذخیره</label>
+            <input type="checkbox" class="form-control" v-model="save" />
+          </div>
+        </div>
+          <div class="col-md-3">
+          <div class="form-group">
+            <label for="">پیش فرض</label>
+            <input type="checkbox" class="form-control" v-model="default11" />
+          </div>
+        </div>
+
         <div class="col-md-4"></div>
         <div class="col-md-12">
+          <span
+            v-text="to_price(unit_price)+'*'+quantity+'='+to_price(unit_price*quantity)"
+          ></span>
 
-          <span v-text="to_price(unit_price)+'*'+quantity+'='+to_price(unit_price*quantity)"></span>
-       
-       {{CURRENCY}}
+          {{CURRENCY}}
         </div>
         <div class="col-md-12">
           <button class="btn btn-success" type="submit">
