--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -55,6 +55,16 @@
             </h6>
         </a>
     </div>
+
+    
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:selection'  %}">
+            <img src="{% static 'img/icons/settings.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                انتخاب حساب
+            </h6>
+        </a>
+    </div>
    
 
     <div class="col-lg-2 col-md-3 col-6">
