--- a/accounting/templates/accounting/invoice-line-item.html
+++ b/accounting/templates/accounting/invoice-line-item.html
@@ -7,12 +7,16 @@
   <div class="col-md-12">
     {% include "accounting/includes/invoice-line-item-units-app/template.html" %}
   </div>
+  <div class="col-md-12">
+    {% include "accounting/includes/invoice-lines-app/template.html" %}
+  </div>
 
   <div class="col-md-12"></div>
 </div>
 {% endblock content %}
 {% block script %}
 {% include "accounting/includes/invoice-line-item-app/script.html" %}
+    {% include "accounting/includes/invoice-lines-app/script.html" %}
  
 
 {% include "accounting/includes/invoice-line-item-units-app/script.html" %} 
