add project manager

--- a/chef/templates/chef/includes/add-meal-item-app/script.html
+++ b/chef/templates/chef/includes/add-meal-item-app/script.html
@@ -7,6 +7,9 @@
     data: {
       food_item_id: 0,
       food_items: food_items_for_add_food_items_app,
+      save: false,
+      default11: false,
+      coef: 1,
       unit_price: 0,
       unit_name: "عدد",
       discount_percentage:0,
@@ -33,6 +36,9 @@
           quantity: this.quantity,
           unit_price: this.unit_price,
           unit_name: this.unit_name,
+          save: this.save,
+          coef: this.coef,
+          default: this.default11,
           discount_percentage: this.discount_percentage,
         };
 
