--- a/accounting/templates/accounting/includes/invoice-lines-app/print-template.html
+++ b/accounting/templates/accounting/includes/invoice-lines-app/print-template.html
@@ -144,9 +144,11 @@
                 </div>
               </td>
               <td class="bordered farsi text-right">
+                {% if  invoice.discount %}
                 <div>
-
-                 <span style="text-decoration: line-through" v-text="to_price(sum_prices())"></span>
+  
+                  <span style="text-decoration: line-through" v-text="to_price(sum_prices())"></span>
+                  {% endif %}
                 
               </div>
                 <span v-text="to_price(sum_total())"></span>
