--- a/projectmanager/templates/projectmanager/includes/add-project-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/add-project-app/template.html
@@ -10,14 +10,13 @@
           aria-controls="collapse-add-project"
         >
           افزودن پروژه
-          
         </button>
       </h5>
     </div>
 
     <div
       id="collapse-add-project"
-      class="collapse  "
+      class="collapse"
       aria-labelledby="heading-add-project"
       data-parent="#accordion-add-project"
     >
@@ -30,8 +29,7 @@
                 <input v-model="title" type="text" class="form-control" />
               </div>
             </div>
- 
-
+            <div class="col-12"></div>
             <div class="col-md-4">
               <div class="form-group">
                 <label for="exampleInputDate">تاریخ</label>
@@ -43,11 +41,6 @@
                   class="form-control"
                   v-model="event_date"
                 />
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class="form-group">
                 <label for="exampleInputDate">زمان</label>
 
                 <input
@@ -56,6 +49,88 @@
                   class="form-control"
                   v-model="event_time"
                 />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="exampleInputDate">شروع</label>
+                <date-picker v-model="start_date"></date-picker>
+
+                <input
+                  type="text"
+                  required
+                  class="form-control"
+                  v-model="start_date"
+                />
+                <label for="exampleInputDate">زمان</label>
+
+                <input
+                  type="text"
+                  required
+                  class="form-control"
+                  v-model="start_time"
+                />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="exampleInputDate">پایان</label>
+                <date-picker v-model="end_date"></date-picker>
+
+                <input
+                  type="text"
+                  required
+                  class="form-control"
+                  v-model="end_date"
+                />
+                <label for="exampleInputDate">زمان</label>
+
+                <input
+                  type="text"
+                  required
+                  class="form-control"
+                  v-model="end_time"
+                />
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="exampleInputDate">پیمانکار</label>
+
+                <select
+                  type="text"
+                  required
+                  class="form-control"
+                  v-model="contractor_id"
+                >
+                  <option
+                    v-for="organization in organizations"
+                    :value="organization.id"
+                    v-text="organization.title"
+                  ></option>
+                </select>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="exampleInputDate">کارفرما</label>
+
+                <select
+                  type="text"
+                  required
+                  class="form-control"
+                  v-model="employer_id"
+                >
+                  <option
+                    v-for="organization in organizations"
+                    :value="organization.id"
+                    v-text="organization.title"
+                  ></option>
+                </select>
               </div>
             </div>
 
