--- a/projectmanager/templates/projectmanager/includes/add-project-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/add-project-app/template.html
@@ -134,7 +134,15 @@
               </div>
             </div>
 
-            <div class="col-md-4"></div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="exampleInputDate">&nbsp;</label>
+
+                <a href="{% url 'organization:organizations' %}" target="_blank"
+                  >لیست سازمان ها</a
+                >
+              </div>
+            </div>
 
             <div class="col-md-12">
               <button class="btn btn-success" type="submit">
