--- a/market/templates/market/index.html
+++ b/market/templates/market/index.html
@@ -36,6 +36,17 @@
         </a>
     </div>
 
+    
+     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'market:desks' %}">
+            <img src="{% static 'market/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+
+                میز ها
+            </h6>
+        </a>
+    </div>
+
 
 
 </div>
