page-thumbnail-header-app

--- a/core/templates/core/includes/page-app/script.html
+++ b/core/templates/core/includes/page-app/script.html
@@ -3,3 +3,4 @@
 </script>
 {% include "core/includes/page-like-app/script.html" %}
 
+{% include "core/includes/page-thumbnail-header-app/script.html" %}
