--- a/chef/templates/chef/food-item.html
+++ b/chef/templates/chef/food-item.html
@@ -1,58 +1,48 @@
-
-{% extends "chef/layout.html" %}
-{% load static %}
-{% block content %}
+{% extends "chef/layout.html" %} {% load static %} {% block content %}
 <div class="row rtl farsi">
-    <div class="col-12">
-        <div class="card">
-            <div class="card-header">
-                <h5>
-                    {{food_item.title}}
-                </h5>
-            </div>
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header">
+        <h5>{{food_item.title}}</h5>
+      </div>
 
-              <div class="card-body">
-                <h5>
-                    {{food_item.name}}
-                </h5>
-                
-               
-                <div>
+      <div class="card-body">
+        <h5>{{food_item.name}}</h5>
 
-                </div>
-                 <a
-                    target="_blank"
-                    href="{{food_item.get_edit_url}}"
-                    title="ویرایش"
-                    class="text-warning mx-2">
-                    <i class="fa fa-edit text-warning"> </i>
-                    ویرایش
-                  </a>
-                  <a
-                    target="_blank"
-                    href="{{food_item.get_delete_url}}"
-                    title="حذف"
-                    class="text-danger mx-2"
-                  >
-                    <i class="fa fa-trash text-danger"> </i>
-                    حذف
-                  </a>
-                {% include "accounting/includes/product-app/card-contents.html" %}
-
-            </div>
-        </div>
+        <div></div>
+        <a
+          target="_blank"
+          href="{{food_item.get_edit_url}}"
+          title="ویرایش"
+          class="text-warning mx-2"
+        >
+          <i class="fa fa-edit text-warning"> </i>
+          ویرایش
+        </a>
+        <a
+          target="_blank"
+          href="{{food_item.get_delete_url}}"
+          title="حذف"
+          class="text-danger mx-2"
+        >
+          <i class="fa fa-trash text-danger"> </i>
+          حذف
+        </a>
+        {% include "accounting/includes/product-app/card-contents.html" %}
+      </div>
     </div>
-    <div class="col-md-12">
-                {% include "accounting/includes/invoice-line-item-units-app/template.html" %}
-
-    </div>
-    <div class="col-12">
-        {% include "chef/includes/meal-items-app/template.html" %}
-    </div>
+  </div>
+  <div class="col-md-12">
+    {% include "accounting/includes/invoice-line-item-units-app/template.html" %}
+  </div>
+  <div class="col-md-12">
+    {% include "core/includes/page-thumbnail-header-app/template.html" %}
+  </div>
+  <div class="col-12">
+    {% include "chef/includes/meal-items-app/template.html" %}
+  </div>
 </div>
 {% endblock content %}
-
-
 {% block script %}
 {% include "accounting/includes/invoice-line-item-app/script.html" %}
 <script>
@@ -61,5 +51,4 @@
 
 {% include "chef/includes/meal-items-app/script.html" %}
 {% include "accounting/includes/invoice-line-item-units-app/script.html" %}
- 
 {% endblock script %}
