--- a/attachments/templates/attachments/includes/page-like-app/template.html
+++ b/attachments/templates/attachments/includes/page-like-app/template.html
@@ -15,7 +15,7 @@
 </span>
 {% else %}
 
-<span title="{{page.likes_count}}">
+<span title="{{likes_count}}">
 
     <i class="fa fa-star " style="color:#f5c103" aria-hidden="true"></i>
 </span>
