--- a/attachments/templates/attachments/includes/comments-app/list.html
+++ b/attachments/templates/attachments/includes/comments-app/list.html
@@ -1,52 +1,52 @@
 {% load to_persian_date %}
 
-<div id="accordion-page-comments">
-    <div class="card" id="page-comments-app">
-        <div class="card-header" id="heading-page-comments">
+<div id="accordion-comments">
+    <div class="card" id="comments-app">
+        <div class="card-header" id="heading-comments">
             <h5 class="text-center">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-page-comments"
-                    aria-expanded="true" aria-controls="collapse-page-comments">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-comments"
+                    aria-expanded="true" aria-controls="collapse-comments">
                     نظرات
                     <span>
                         <small class="text-danger mx-2">
-                            <span>{{page_comments|length}}</span>
+                            <span>{{comments|length}}</span>
                         </small>
                     </span>
                 </button>
             </h5>
         </div>
-        <div id="collapse-page-comments" class="collapse" aria-labelledby="heading-page-comments"
-            data-parent="#accordion-page-comments">
+        <div id="collapse-comments" class="collapse" aria-labelledby="heading-comments"
+            data-parent="#accordion-comments">
             <div class="card-body">
-                {% for page_comment in page_comments %}
+                {% for comment in comments %}
                 <div class="py-3">
                     <div class="media aaa rtl">
-                        <a title="{{page_comment.profile.name}}" href="{{page_comment.profile.get_absolute_url}}">
-                            <img src="{{page_comment.profile.image}}" class="rounded-circle" width="64" alt="">
+                        <a title="{{comment.profile.name}}" href="{{comment.profile.get_absolute_url}}">
+                            <img src="{{comment.profile.image}}" class="rounded-circle" width="64" alt="">
                         </a>
                         <div class="media-body mr-2">
                             <div class="text-right">
                                 صفحه : 
-                            <a target="_blank" href="{{page_comment.page.get_absolute_url}}">
+                            <a target="_blank" href="{{comment.page.get_absolute_url}}">
                                 <span class="farsi text-right text-primary">
-                                    {{page_comment.page.title}}
+                                    {{comment.page.title}}
                                 </span>
                             </a>
                                 </div>
                                 <div class="text-right">
                                 
-                                <a target="_blank" href="{{page_comment.profile.get_absolute_url}}">
+                                <a target="_blank" href="{{comment.profile.get_absolute_url}}">
                                     <span class="farsi text-right text-primary">
-                                        {{page_comment.profile.name}}
+                                        {{comment.profile.name}}
                                     </span>
                                 </a>
                                 <span
-                                    class="farsi small text-secondary mr-2 text-right">{{page_comment.persian_date_added}}</span>
+                                    class="farsi small text-secondary mr-2 text-right">{{comment.persian_date_added}}</span>
                             </div>
                             <div class="alert alert-light farsi  text-right fade show" role="alert">
 
                                 <div class="farsi text-dark text-right">
-                                    {{page_comment.comment|safe}}
+                                    {{comment.comment|safe}}
                                 </div>
                             </div>
                         </div>
