--- a/attachments/templates/attachments/includes/comments-app/template.html
+++ b/attachments/templates/attachments/includes/comments-app/template.html
@@ -1,27 +1,27 @@
 {% load to_persian_date %}
-<div id="accordion-page-comments">
-    <div class="card" id="page-comments-app">
-        <div class="card-header" id="heading-page-comments">
+<div id="accordion-comments">
+    <div class="card" id="comments-app">
+        <div class="card-header" id="heading-comments">
             <h5 class="text-center">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-page-comments"
-                    aria-expanded="true" aria-controls="collapse-page-comments">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-comments"
+                    aria-expanded="true" aria-controls="collapse-comments">
                     نظرات
-                    <span v-if="page_comments.length>0">
+                    <span v-if="comments.length>0">
                         <small class="text-danger mx-2">
-                            <span v-text="page_comments.length"></span>
+                            <span v-text="comments.length"></span>
                         </small>
                     </span>
                 </button>
             </h5>
         </div>
-        <div id="collapse-page-comments" class="collapse" aria-labelledby="heading-page-comments"
-            data-parent="#accordion-page-comments">
+        <div id="collapse-comments" class="collapse" aria-labelledby="heading-comments"
+            data-parent="#accordion-comments">
             <div class="card-body">
-                <div class="py-3" v-for="page_comment in page_comments">
-                    <page-comment-component :page_comment="page_comment">
-                    </page-comment-component>
+                <div class="py-3" v-for="comment in comments">
+                    <comment-component :comment="comment">
+                    </comment-component>
                 </div>
-                {% if add_page_comment_form %}
+                {% if add_comment_form %}
                 <div class="media rtl ">
                     <img title="{{me_profile.full_name}}" src="{{me_profile.image}}" class="rounded-circle" width="64" alt="">
                     <div class="media-body mr-2"> 
