--- a/attachments/templates/attachments/includes/downloads-app/script.html
+++ b/attachments/templates/attachments/includes/downloads-app/script.html
@@ -1,8 +1,8 @@
 <script>
-    let url_add_download = "{% url 'core:add_page_download' %}"
-    // let downloads=JSON.parse(`{1{page_downloads_s|escapejs}}`)
-    let page_downloads_app = new Vue({
-        el: "#page-downloads-app",
+    let url_add_download = "{% url 'attachments:add_download' %}"
+    let downloads=JSON.parse(`{{downloads_s|escapejs}}`)
+    let downloads_app = new Vue({
+        el: "#downloads-app",
         data: {
             new_download_title: "",
             downloads: downloads,
@@ -11,8 +11,8 @@
             show_add_download_form: false,
         },
         methods: {
-            add_page_download: function () {
-                page_downloads_app.waiting = true
+            add_download: function () {
+                downloads_app.waiting = true
                 let title = this.new_download_title
                 let formData = new FormData();
                 let file1 = $('#add-download-form')[0].elements[1].files[0]
@@ -28,14 +28,14 @@
                     contentType: false,
                     processData: false,
                     success: function (data) {
-                        page_downloads_app.waiting = false
+                        downloads_app.waiting = false
 
                         if (data != 0) {
                             // //console.log(data)
                             if (data.result === 'SUCCEED') {
-                                page_downloads_app.downloads.push(data.page_download)
-                                page_downloads_app.new_download_title = ''
-                                page_downloads_app.new_download_file = ''
+                                downloads_app.downloads.push(data.download)
+                                downloads_app.new_download_title = ''
+                                downloads_app.new_download_file = ''
 
 
                             }
