--- a/attachments/templates/attachments/includes/page-images-app/template.html
+++ b/attachments/templates/attachments/includes/page-images-app/template.html
@@ -20,7 +20,15 @@
             aria-labelledby="headingpageimages" data-parent="#accordion-page-images">
             <div class="card-body">
                 <div class="row rtl">
-                    <div class="col-md-3 col-6 farsi text-center" v-for="image in images">
+                
+
+
+
+
+
+                    <div class="col-md-3 farsi text-center" v-for="image in images">
+
+
                         <h6 class="text-center mt-4 mb-2">
                             <a target="_blank" :href="image.get_absolute_url">
 
