--- a/core/templates/core/page.html
+++ b/core/templates/core/page.html
@@ -16,7 +16,17 @@
 
             
             <div class="col-md-12">
-                {% include "attachments/includes/page-comments-app/template.html" %}
+                {% include "attachments/includes/comments-app/template.html" %}
+
+            </div>  
+            
+            <div class="col-md-12">
+                {% include "attachments/includes/links-app/template.html" %}
+
+            </div>  
+            
+            <div class="col-md-12">
+                {% include "attachments/includes/downloads-app/template.html" %}
 
             </div>  
              <div class="col-md-12">
@@ -36,5 +46,7 @@
 {% block script %}
 {% include "core/includes/page-app/script.html" %}
 
-{% include "attachments/includes/page-comments-app/script.html" %}
+{% include "attachments/includes/comments-app/script.html" %}
+{% include "attachments/includes/links-app/script.html" %}
+{% include "attachments/includes/downloads-app/script.html" %}
 {% endblock script %}
