--- a/core/templates/core/includes/page-app/script.html
+++ b/core/templates/core/includes/page-app/script.html
@@ -4,3 +4,7 @@
 {% include "attachments/includes/page-like-app/script.html" %}
 
 {% include "core/includes/page-thumbnail-header-app/script.html" %}
+
+{% include "attachments/includes/comments-app/script.html" %}
+{% include "attachments/includes/links-app/script.html" %}
+{% include "attachments/includes/downloads-app/script.html" %}
