--- a/projectmanager/templates/projectmanager/project.html
+++ b/projectmanager/templates/projectmanager/project.html
@@ -1,41 +1,24 @@
-{% extends "projectmanager/layout.html" %}
-
-{% block content %} 
+{% extends "projectmanager/layout.html" %} {% block content %}
 <div class="row rtl">
-     
-    <div class="col-md-9">
-        <div class="row rtl">
+  <div class="col-md-3">
+        {% include "projectmanager/includes/project-app/card.html" %}
 
+  </div>
+  <div class="col-md-9">
+    <div class="row rtl">
+      <div class="col-md-12">
+        {% include "attachments/includes/comments-app/template.html" %}
+      </div>
 
-           
-            <div class="col-md-4">
-                {% include "core/includes/page-downloads-app/template.html" %}
+      <div class="col-md-6">
+        {% include "attachments/includes/links-app/template.html" %}
+      </div>
 
-            </div>
-            <div class="col-md-4">
-                {% include "core/includes/page-links-app/template.html" %} 
-
-            </div>
-           
-            <div class="col-md-12">
-                {% include "core/includes/page-images-app/template.html" %}
-
-            </div>
-            <div class="col-md-12">
-                {% include "core/includes/page-comments-app/template.html" %}
-
-            </div>  
-            
-        </div>
+      <div class="col-md-6">
+        {% include "attachments/includes/downloads-app/template.html" %}
+      </div>
     </div>
-
-
+  </div>
 </div>
 
-{% endblock content %}
-
-
-{% block script %}
-{% include "core/includes/page-app/script.html" %}
-
-{% endblock script %}
+{% endblock content %} {% block script %} {% include "core/includes/page-app/script.html" %} {% endblock script %}
