--- a/templates/phoenix/includes/navbar.html
+++ b/templates/phoenix/includes/navbar.html
@@ -75,6 +75,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0" method="POST" action="{{SITE_URL}}{{APP_NAME}}/search/">
       {% csrf_token %}
+      <input  value="{{APP_NAME}}" type="hidden" name="app_name">
       <input class="form-control mr-sm-2"  style="border-radius: 0 0.5rem 0.5rem 0 !important;" value="{{search_for}}" type="search" name="search_for" placeholder="جستجو ..." aria-label="Search">
       <button class="btn btn-success my-2 my-sm-0" type="submit" style="border-radius: 0.5rem 0 0 0.5rem !important;">
         <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> -->
